[package]
name = "message-brocker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["full"] }
tonic = "0.14.6"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.3", features = ["v4"] }
prost = "0.14.1"
tonic-prost = "0.14.6"

[build-dependencies]
tonic-build = "0.14.6"
tonic-prost-build = "0.14.6"
